Remove broken commits

--- a/doc.Qmd
+++ b/doc.Qmd
@@ -358,6 +358,7 @@ Guardando però i residui sembra esserci un'altra misurazione anomala, la numero
 Per quanto riguarda il primo modello si ottiene:
 
 ```{r}
+senza3728 <- Pollution[c(-28,-37), ]
 #Primo modello 
 mod4 <- lm(mort ~ prec + educ + hous + nonw + poor + log(nox) + hous*educ + poor*nonw*educ, data = senza3728) 
 summary(mod4) 
@@ -491,7 +492,7 @@ Tra tutti il migliore sembrerebbe essere l'ultimo modello proposto, che è stato
 Dai grafici della Distanza di Cook dei vari modelli, si evidenzia un altro valore ricorrente che sembrerebbe essere un outlier. Si decide di rieseguire il calcolo dei modelli togliendo questa ulteriore osservazione.
 
 ```{r}
-senza3728 <- Pollution[c(-28,-37), ]
+# senza3728 <- Pollution[c(-28,-37), ]
 ```
 
 ##### Terzo modello senza osservazione 37 e 28
@@ -518,43 +519,43 @@ AIC(regmultiAIC)
 
 Si nota in questi ultimi modelli che ci sono stati dei miglioramenti sostanziali non tanto in termini di $R^2$ , bensì di AIC.
 
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $$Modello$$                        | $$                                                                                                               | $$                                                                                                                                                                                                                                                                 |
-|                                    |                                                                                                  R^2-Adjusted    |                                                                                                                                                                                                                                                           AIC      |
-|                                    |                                                                                                           $$     |                                                                                                                                                                                                                                                             $$     |
-+:==================================:+:================================================================================================================:+:==================================================================================================================================================================================================================================================================:+
-| Modello StepAIC originale          | 71.39%                                                                                                           | 429.63                                                                                                                                                                                                                                                             |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Primo Modello                      | 80.98%                                                                                                           | 578.96                                                                                                                                                                                                                                                             |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Primo Modello senza 37             | 80.01%                                                                                                           | 565.76                                                                                                                                                                                                                                                             |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Primo Modello                      | 82.72%                                                                                                           | 545.52                                                                                                                                                                                                                                                             |
-|                                    |                                                                                                                  |                                                                                                                                                                                                                                                                    |
-| senza 37, 28                       |                                                                                                                  |                                                                                                                                                                                                                                                                    |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| **Primo Modello**                  | **83.12%**                                                                                                       | **534.07**                                                                                                                                                                                                                                                         |
-|                                    |                                                                                                                  |                                                                                                                                                                                                                                                                    |
-| **senza 37, 28, 11**               |                                                                                                                  |                                                                                                                                                                                                                                                                    |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Secondo Modello                    | 81.19%                                                                                                           | 581.69                                                                                                                                                                                                                                                             |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Secondo Modello senza 37           | 79.01%                                                                                                           | 571.25                                                                                                                                                                                                                                                             |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Secondo Modello                    | 82.88 %                                                                                                          | 548.29                                                                                                                                                                                                                                                             |
-|                                    |                                                                                                                  |                                                                                                                                                                                                                                                                    |
-| senza 37, 28                       |                                                                                                                  |                                                                                                                                                                                                                                                                    |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| **Secondo Modello**                | **83.59%**                                                                                                       | **535.75**                                                                                                                                                                                                                                                         |
-|                                    |                                                                                                                  |                                                                                                                                                                                                                                                                    |
-| **senza 37, 28, 11**               |                                                                                                                  |                                                                                                                                                                                                                                                                    |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Terzo Modello senza 37             | 80.65%                                                                                                           | 562.33                                                                                                                                                                                                                                                             |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Terzo Modello senza 37, 28         | 82.88                                                                                                            | 548.29                                                                                                                                                                                                                                                             |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| **Terzo Modello senza 37, 28, 11** | **85.15%**                                                                                                       | **525.99**                                                                                                                                                                                                                                                         |
-+------------------------------------+------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $$Modello$$                        | $$                                                                                                            | $$                                                                                                                                                                                                                                                             |
+|                                    |                                                                                                  R^2-Adjusted |                                                                                                                                                                                                                                                           AIC  |
+|                                    |                                                                                                           $$  |                                                                                                                                                                                                                                                             $$ |
++:==================================:+:=============================================================================================================:+:==============================================================================================================================================================================================================================================================:+
+| Modello StepAIC originale          | 71.39%                                                                                                        | 429.63                                                                                                                                                                                                                                                         |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Primo Modello                      | 80.98%                                                                                                        | 578.96                                                                                                                                                                                                                                                         |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Primo Modello senza 37             | 80.01%                                                                                                        | 565.76                                                                                                                                                                                                                                                         |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Primo Modello                      | 82.72%                                                                                                        | 545.52                                                                                                                                                                                                                                                         |
+|                                    |                                                                                                               |                                                                                                                                                                                                                                                                |
+| senza 37, 28                       |                                                                                                               |                                                                                                                                                                                                                                                                |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Primo Modello**                  | **83.12%**                                                                                                    | **534.07**                                                                                                                                                                                                                                                     |
+|                                    |                                                                                                               |                                                                                                                                                                                                                                                                |
+| **senza 37, 28, 11**               |                                                                                                               |                                                                                                                                                                                                                                                                |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Secondo Modello                    | 81.19%                                                                                                        | 581.69                                                                                                                                                                                                                                                         |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Secondo Modello senza 37           | 79.01%                                                                                                        | 571.25                                                                                                                                                                                                                                                         |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Secondo Modello                    | 82.88 %                                                                                                       | 548.29                                                                                                                                                                                                                                                         |
+|                                    |                                                                                                               |                                                                                                                                                                                                                                                                |
+| senza 37, 28                       |                                                                                                               |                                                                                                                                                                                                                                                                |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Secondo Modello**                | **83.59%**                                                                                                    | **535.75**                                                                                                                                                                                                                                                     |
+|                                    |                                                                                                               |                                                                                                                                                                                                                                                                |
+| **senza 37, 28, 11**               |                                                                                                               |                                                                                                                                                                                                                                                                |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Terzo Modello senza 37             | 80.65%                                                                                                        | 562.33                                                                                                                                                                                                                                                         |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Terzo Modello senza 37, 28         | 82.88                                                                                                         | 548.29                                                                                                                                                                                                                                                         |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Terzo Modello senza 37, 28, 11** | **85.15%**                                                                                                    | **525.99**                                                                                                                                                                                                                                                     |
++------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 : Tabella riassuntiva
 
@@ -575,7 +576,7 @@ $$
 $$
 
 $$
-+\beta_7\cdot \text{hous}+\beta_8\cdot\log(\text{nox})*\log(\text{so2})+\beta_9\cdot\text{nonw}*\text{poor}+\beta_{10}\cdot\text{euc}*\text{hous}
++\beta_7\cdot \text{hous}+\beta_8\cdot\log(\text{nox})*\log(\text{so2})+\beta_9\cdot\text{nonw}*\text{poor}+\beta_{10}\cdot\text{educ}*\text{hous}
 $$
 
 Ovviamente si è consci che c'è un aumento della complessità del modello rispetto al primo modello proposto. Si vede anche che non è proporzionale la crescita dell' $R^2$ e dell'AIC. Per quanto dunque il modello trovato spieghi le variabili si può supporre anche che possa essere overfittato (un grande aumento dell'AIC deriva probabilmente dall'avere incluso molti parametri aggiuntivi), ovvero, spiega bene il presente dataset ma potrebbe non generalizzare bene nuovi dati.
