--- a/doc.Qmd
+++ b/doc.Qmd
@@ -257,6 +257,7 @@ Si procede ora con formulare un primo abbozzo del modello di regressione multiva
 ```{r}
 lreg <- lm(mort ~ ., data = Pollution)
 a <- stepAIC(lreg, direction = "both")
+AIC(lreg) 
 ```
 
 ```{r}
@@ -359,6 +360,9 @@ Per quanto riguarda il primo modello si ottiene:
 
 ```{r}
 senza3728 <- Pollution[c(-28,-37), ]
+```
+
+```{r}
 #Primo modello 
 mod4 <- lm(mort ~ prec + educ + hous + nonw + poor + log(nox) + hous*educ + poor*nonw*educ, data = senza3728) 
 summary(mod4) 
@@ -465,9 +469,22 @@ par(mfrow = c(1, 1))
 
 ##### 
 
-### Terzo modello (senza osservazione 37)
+### Terzo modello
 
-Si applica dunque la funzione stepAIC al modello *regmulti2* appena formulato, per vedere se in realtà ne è ancora migliorabile la stima
+Si applica dunque la funzione stepAIC al modello *regmulti1* appena formulato, per vedere se in realtà ne è ancora migliorabile la stima
+
+```{r}
+regmultiAIC <- stepAIC(regmulti1) 
+summary(regmultiAIC) 
+AIC(regmultiAIC) 
+par(mfrow = c(2, 2))  
+plot(regmultiAIC, which = c(1,2,4,5))  
+par(mfrow = c(1, 1)) 
+```
+
+#### Terzo modello (senza osservazione 37)
+
+Vedendo che l'osservazione 37 si rivela anche qua essere un outlier, si applica dunque la funzione stepAIC al modello *regmulti2* appena formulato, per vedere se in realtà ne è ancora migliorabile la stima
 
 ```{r}
 regmultiAIC <- stepAIC(regmulti2)
@@ -491,19 +508,15 @@ Tra tutti il migliore sembrerebbe essere l'ultimo modello proposto, che è stato
 
 Dai grafici della Distanza di Cook dei vari modelli, si evidenzia un altro valore ricorrente che sembrerebbe essere un outlier. Si decide di rieseguire il calcolo dei modelli togliendo questa ulteriore osservazione.
 
-```{r}
-# senza3728 <- Pollution[c(-28,-37), ]
-```
-
 ##### Terzo modello senza osservazione 37 e 28
 
 ```{r}
 #Secondo modello 
-regmulti2 <- lm(mort ~ educ + nonw + poor + prec*log(nox)*log(so2) + educ*poor*nonw + hous*educ  , data = senza3728) 
-summary(regmulti2)  
-AIC(regmulti2)
+regmulti3 <- lm(mort ~ educ + nonw + poor + prec*log(nox)*log(so2) + educ*poor*nonw + hous*educ  , data = senza3728) 
+summary(regmulti3)  
+AIC(regmulti3)
 par(mfrow = c(2, 2))
-plot(regmulti2, which = c(1,2,4,5))
+plot(regmulti3, which = c(1,2,4,5))
 par(mfrow = c(1, 1))
 ```
 
@@ -519,64 +532,32 @@ AIC(regmultiAIC)
 
 Si nota in questi ultimi modelli che ci sono stati dei miglioramenti sostanziali non tanto in termini di $R^2$ , bensì di AIC.
 
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $$Modello$$                        | $$                                                                                                            | $$                                                                                                                                                                                                                                                             |
-|                                    |                                                                                                  R^2-Adjusted |                                                                                                                                                                                                                                                           AIC  |
-|                                    |                                                                                                           $$  |                                                                                                                                                                                                                                                             $$ |
-+:==================================:+:=============================================================================================================:+:==============================================================================================================================================================================================================================================================:+
-| Modello StepAIC originale          | 71.39%                                                                                                        | 429.63                                                                                                                                                                                                                                                         |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Primo Modello                      | 80.98%                                                                                                        | 578.96                                                                                                                                                                                                                                                         |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Primo Modello senza 37             | 80.01%                                                                                                        | 565.76                                                                                                                                                                                                                                                         |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Primo Modello                      | 82.72%                                                                                                        | 545.52                                                                                                                                                                                                                                                         |
-|                                    |                                                                                                               |                                                                                                                                                                                                                                                                |
-| senza 37, 28                       |                                                                                                               |                                                                                                                                                                                                                                                                |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| **Primo Modello**                  | **83.12%**                                                                                                    | **534.07**                                                                                                                                                                                                                                                     |
-|                                    |                                                                                                               |                                                                                                                                                                                                                                                                |
-| **senza 37, 28, 11**               |                                                                                                               |                                                                                                                                                                                                                                                                |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Secondo Modello                    | 81.19%                                                                                                        | 581.69                                                                                                                                                                                                                                                         |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Secondo Modello senza 37           | 79.01%                                                                                                        | 571.25                                                                                                                                                                                                                                                         |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Secondo Modello                    | 82.88 %                                                                                                       | 548.29                                                                                                                                                                                                                                                         |
-|                                    |                                                                                                               |                                                                                                                                                                                                                                                                |
-| senza 37, 28                       |                                                                                                               |                                                                                                                                                                                                                                                                |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| **Secondo Modello**                | **83.59%**                                                                                                    | **535.75**                                                                                                                                                                                                                                                     |
-|                                    |                                                                                                               |                                                                                                                                                                                                                                                                |
-| **senza 37, 28, 11**               |                                                                                                               |                                                                                                                                                                                                                                                                |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Terzo Modello senza 37             | 80.65%                                                                                                        | 562.33                                                                                                                                                                                                                                                         |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Terzo Modello senza 37, 28         | 82.88                                                                                                         | 548.29                                                                                                                                                                                                                                                         |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| **Terzo Modello senza 37, 28, 11** | **85.15%**                                                                                                    | **525.99**                                                                                                                                                                                                                                                     |
-+------------------------------------+---------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+### Riassunto dei Modelli
 
-: Tabella riassuntiva
+|               Modello                |    R^2^    |    AIC     |                                                                        Osservazioni                                                                        |
+|:------------------:|:-----------:|:-----------:|:------------------------:|
+|      Modello StepAIC originale       |   71.39%   |   612.06   |                          Questo modello serve come base di confronto per valutare i miglioramenti ottenuti con gli altri modelli.                          |
+|            Primo Modello             |   80.98%   |   578.96   |                           Ha un notevole miglioramento rispetto al modello originale sia in termini di R^2^ Adjusted che di AIC.                           |
+|        Primo Modello senza 37        |   80.01%   |   565.76   | Una leggera riduzione nel R^2^ Adjusted, ma una significativa riduzione nell'AIC, indicando un modello più semplice con una buona qualità di adattamento.  |
+|      Primo Modello senza 37, 28      |   82.72%   |   545.52   |                    Miglioramento sia in R^2^ Adjusted che in AIC, suggerendo che la rimozione di queste variabili migliora il modello.                     |
+|  **Primo Modello senza 37, 28, 11**  | **83.12%** | **534.07** |                                  Ulteriore miglioramento in entrambe le metriche, indicando un modello molto efficiente.                                   |
+|           Secondo Modello            |   81.19%   |   581.69   |                                     Buon miglioramento rispetto al modello originale, ma non quanto il primo modello.                                      |
+|       Secondo Modello senza 37       |   79.01%   |   571.25   | Riduzione del R^2^ Adjusted e AIC rispetto al modello completo, suggerendo che la rimozione della variabile 37 non è così benefica come nel primo modello. |
+|     Secondo Modello senza 37, 28     |   82.88%   |   548.29   |                                          Notevole miglioramento in entrambe le metriche, simile al primo modello.                                          |
+| **Secondo Modello senza 37, 28, 11** | **83.59%** | **535.75** |                               Ulteriore miglioramento, ma non tanto significativo quanto il primo modello senza 37, 28, 11.                                |
+|            Terzo Modello             |   81.91%   |   578.08   |                                        Buon miglioramento rispetto al modello originale, simile al secondo modello.                                        |
+|        Terzo Modello senza 37        |   80.65%   |   562.33   |                                                 Buona riduzione nell'AIC e leggero calo del R^2^ Adjusted.                                                 |
+|      Terzo Modello senza 37, 28      |   82.88%   |   548.29   |                                       Miglioramento simile al primo e al secondo modello senza le stesse variabili.                                        |
+|  **Terzo Modello senza 37, 28, 11**  | **85.15%** | **525.99** |       Il miglior modello in termini di entrambe le metriche, suggerendo che la rimozione di queste tre variabili produce un modello molto efficace.        |
 
-## Conclusione:
+### Conclusione
 
-La scelta del miglior modello dipende dall'obiettivo specifico:
+Considerando entrambe le metriche, il **Terzo Modello senza 37, 28, 11** sembra essere il migliore. Questo modello presenta il più alto R^2^ Adjusted (85.15%) e il più basso AIC (525.99), indicando un eccellente equilibrio tra capacità di spiegazione della variabilità dei dati e complessità del modello.
 
--   Se l'obiettivo è massimizzare la capacità del modello di spiegare la variabilità dei dati, il Terzo Modello è il migliore.
+$$ \text{mort}\sim \beta_0+\beta_1\cdot\text{educ}+\beta_2\cdot\text{nonw}+\beta_3\cdot \text{poor}+\beta_4\cdot\text{prec}+\beta_5\cdot\log(\text{nox})+\beta_6\cdot\log(\text{so2})+ $$
 
--   Se l'obiettivo è minimizzare la complessità del modello mantenendo una buona qualità dell'adattamento (AIC), il Modello StepAIC originale è il migliore.
+$$ +\beta_7\cdot \text{hous}+\beta_8\cdot\log(\text{nox})*\log(\text{so2})+\beta_9\cdot\text{nonw}*\text{poor}+\beta_{10}\cdot\text{educ}*\text{hous} $$
 
-In generale, una combinazione di entrambi i criteri è spesso considerata.
+Se l'obiettivo è massimizzare la capacità esplicativa mantenendo la semplicità del modello, questo sembra essere il miglior compromesso.
 
-Se si desidera un equilibrio tra un buon $R^2$ aggiustato e un basso AIC che però è stato soggetto ad una scrematura dei dati, si potrebbe considerare il Terzo Modello, che ha un buon $R^2$ aggiustato (85.15%) e un AIC relativamente basso (525.99).
-
-$$
-\text{mort}\sim \beta_0+\beta_1\cdot\text{educ}+\beta_2\cdot\text{nonw}+\beta_3\cdot \text{poor}+\beta_4\cdot\text{prec}+\beta_5\cdot\log(\text{nox})+\beta_6\cdot\log(\text{so2})+
-$$
-
-$$
-+\beta_7\cdot \text{hous}+\beta_8\cdot\log(\text{nox})*\log(\text{so2})+\beta_9\cdot\text{nonw}*\text{poor}+\beta_{10}\cdot\text{educ}*\text{hous}
-$$
-
-Ovviamente si è consci che c'è un aumento della complessità del modello rispetto al primo modello proposto. Si vede anche che non è proporzionale la crescita dell' $R^2$ e dell'AIC. Per quanto dunque il modello trovato spieghi le variabili si può supporre anche che possa essere overfittato (un grande aumento dell'AIC deriva probabilmente dall'avere incluso molti parametri aggiuntivi), ovvero, spiega bene il presente dataset ma potrebbe non generalizzare bene nuovi dati.
+Non è da escludere la possibilità, che avendo il modello tante variabili specifiche, possa essere overfittato e non prevedere bene se applicato ad un nuovo set di dati.
